fix block alignment to center

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -332,6 +332,8 @@ code {
 
 .block {
   max-width: 92%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .block-content {
@@ -382,6 +384,7 @@ code {
 }
 
 .title_divider {
+  margin-left: 1px;
   border-bottom-width: 8px;
   border-bottom-style: solid;
   padding-top: 0px;
